# PathfinderNPC

./: .gitignore  test.py
feat_predictor/: Cargo.toml  README.md  feats.db
feat_predictor/src/: feat_map.rs  main.rs  neural_net.rs  sql_lite.rs  sql_litex.rs
feat_predictor/src/data/: feats.txt  feats1.sql  id_output.txt  input.txt
pdf_reader/: Cargo.toml
pdf_reader/src/: main.rs  pdfhandling.rs  text_parser.rs
pdf_reader/text/: Adin Lir (18th-level noble drow mystic theurge) - traits.txt  Akoran (15th-level human lich necromancer) - monster character.txt  Aldiss Lear (9th-level human mindblade) - traits.txt  Aleil Sylvari (16th-level half-elf relic thief) - traits.txt  Aneelde Cansiv (12th-level human black dragon sycophant).txt  Anna and Teddy (8th-level human haunted maiden).txt  Araonna Chorster (15th-level human death oracle) - mythic variant.txt  Arbutus (18th-level ghoran gardener).txt  Baby Hecaton (11th-level eidolon).txt  Balasar Frolo (9th-level human holy tyrant) - inquisitor.txt  Bao Zheng (8th-level human ronin).txt  Bein Brennil (7th-level kitsune enchantress).txt  Bumi Mei Fong (12th-level human hulking hurler) - traits.txt  Claon Tonkinelm (13th-level gnome psychic war machine) - traits.txt  Corvo Kenwall (10th-level human magus assassin).txt  Cyndel Ghydel (11th-level tiefling knife fighter).txt  Cúran (8th-level elf moon caller).txt  Daren Mott (5th-level human martial arts magus) - traits.txt  Dayer Rann (15th-level human master archer).txt  Dirgah Hammerhead (8th-level dwarven Inner Sea pirate).txt  Gareth Lharz (7th-level human templar).txt  (+153 more)
(+40 files in other folders)
