[package]
name = "feat_predictor"
version = "0.1.0"
authors = ["James DeVore <jdevore4592@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [dependencies.rusqlite]
# version = "0.21.0"
# features = ["bundled"]

[dependencies]
rusty-machine = "0.5.4"
rand = "0.7.3"